--- a/formvalidation.html
+++ b/formvalidation.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+<html>
+
 <body>
-    
+    <h1>JavaScript Variables</h1>
 
+    <p>You can declare many variables in one statement.</p>
 
+    <p id="demo"></p>
 
+    <script>
+        let person = "John Doe", carName = "Volvo", price = 200;
+        document.getElementById("demo").innerHTML = "Person: " + person + "<br>" +
+            "Car Name: " + carName + "<br>" +
+            "Price: " + price;
+    </script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
+
 </html>
